# pandoc-service

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  heading_levels.lua  inline_styles.lua  page_orientation.lua  pyproject.toml  reference.docx  renovate.json  sonar-project.properties  tox.ini
.github/workflows/: actionlint.yml  ci.yml  claude-code-review.yml  pr.yml
.sonarlint/: connectedMode.json
app/: DocxColorPreProcess.py  DocxLatexPreProcess.py  DocxListLevelPreProcess.py  DocxMathColorPostProcess.py  DocxMathColorPreProcess.py  DocxParagraphPreProcess.py  DocxPostProcess.py  DocxReferencesPostProcess.py  DocxTablePreProcess.py  HtmlImagePreProcess.py  HtmlIndentPreProcess.py  HtmlListsPreProcess.py  HtmlMathColorPreProcess.py  HtmlParagraphPreProcess.py  HtmlTableLayout.py  PandocController.py  PandocServiceApplication.py  PptxPostProcess.py  chromium_manager.py  constants.py  docx_ooxml.py  metrics_server.py  pandoc_metrics.py  prometheus_metrics.py  schema.py  svg_processor.py
filters/: docx_caption_labels_to_latex.lua  docx_colors_to_latex.lua  docx_lists_to_latex.lua  docx_math_colors_to_latex.lua  docx_paragraphs_to_latex.lua  docx_tables_to_latex.lua  docx_text_decorations.lua  heading_levels.lua  html_captions.lua  html_lists.lua  html_tables_to_latex.lua  inline_styles.lua  page_orientation.lua
monitoring/: README.md  docker-compose.yml  generate-load.sh  prometheus.yml  restart-monitoring.sh  start-monitoring.sh  stop-monitoring.sh
monitoring/grafana/dashboards/: pandoc-service.json
monitoring/grafana/provisioning/dashboards/: default.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
test-data/: big_image_in_base64.txt  expected-docx-to-txt.txt  template-red.docx
tests/: README.md  arguments_parser.py  conftest.py  default.pptx  test_caption_references_integration.py  test_chromium_manager.py  test_container.py  test_convert.py  test_convert_to_docx_with_template.py  test_docx_color_preprocess.py  test_docx_colors_to_latex_filter.py  test_docx_latex_preprocess.py  test_docx_list_level_preprocess.py  test_docx_lists_to_latex_filter.py  test_docx_math_color_postprocess.py  test_docx_math_color_preprocess.py  test_docx_paragraph_preprocess.py  test_docx_paragraphs_to_latex_filter.py  test_docx_post_process.py  test_docx_references_post_process.py  test_docx_table_layout_to_latex.py  test_docx_table_preprocess.py  test_docx_text_decorations_filter.py  test_html_captions_filter.py  test_html_image_preprocess.py  test_html_indent_preprocess.py  test_html_lists_filter_integration.py  test_html_lists_preprocess.py  test_html_math_color_preprocess.py  test_html_paragraph_preprocess.py  test_html_table_layout.py  test_html_tables_to_latex_filter.py  test_inline_styles_filter_integration.py  test_math_color_integration.py  test_metrics_server.py  test_pandoc_controller.py  test_pandoc_service_application.py  test_pptx_post_process.py  test_prometheus_metrics.py  test_svg_processor.py  (+2 more)
tests/container/: container-structure-test.yaml
tests/data/: README.md  colored.docx  expected-html-to-md.md  expected-html-to-textile.textile  expected-html-to-txt.txt  ref_1234567890.docx  test-input.docx
tests/shell/: README.md  test_pandoc_service.sh
