[project]
name = "pandoc-service"
version = "0.0.0"  # the version is controlled by the pipeline
description = "Service for https://pandoc.org/"
authors = [
    {name = "SBB Polarion Team", email = "polarion-opensource@sbb.ch"},
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "python-docx==1.2.0",
    "fastapi==0.138.0",
    "uvicorn==0.49.0",
    "python-multipart==0.0.32",
    "defusedxml==0.7.1",
    "asgiref==3.11.1",
    "beautifulsoup4==4.15.0",
    "playwright==1.60.0",
    "psutil==7.2.2",
    "prometheus-client==0.25.0",
    "prometheus-fastapi-instrumentator==8.0.0",
]

[dependency-groups]
dev = [
    "pre-commit==4.6.0",
    "ruff==0.15.18",
    "mypy==2.1.0",
    "anyio==4.14.0",  # Explicit for mypy type checking (transitive from starlette)
    "types-defusedxml==0.7.0.20260504",
    "types-psutil==7.2.2.20260518",
]
test = [
    "tox==4.55.1",
    "tox-uv==1.35.2",
    # for debug source code for pytest --> see tox.ini section [testenv]
    "docker==7.1.0",
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-mock==3.15.1",
    "pytest-cov==7.1.0",
    "pytest-timeout==2.4.0",
    "httpx==0.28.1",
    "coverage==7.14.2",
]

[tool.uv]
# Set to false because this project is an application, not a library
package = false

[tool.ruff]
line-length = 240
fix = true
show-fixes = true
exclude = [
    "tests/*"  # Exclude all test files from linting
]

[tool.ruff.lint]
extend-select = [
    # --- Recommended ---
    "E", "W", # pycodestyle errors and warnings
    "F",      # Pyflakes
    "I",      # isort
    "C4",     # flake8-comprehensions
    "C90",    # mccabe
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "S",      # flake8-bandit
    "PL",     # Pylint
    "PTH",    # flake8-pathlib
    "TCH",    # type-checking imports
    "SIM",    # flake8-simplify
    "T20",    # flake8-print
    "ERA",    # eradicate
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101", # No assert rule (bandit)
    "PLR2004", # No magic values (pylint)
]

[tool.ruff.format]
line-ending = "lf"

[tool.pytest.ini_options]
# Browser-based ChromiumManager/SvgProcessor tests are async and marked with
# @pytest.mark.asyncio (strict mode), mirroring weasyprint-service.
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
explicit_package_bases = true
disallow_untyped_defs = true
exclude = "tests/.*"

[[tool.mypy.overrides]]
module = "docx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pptx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "pydantic.*",
    "starlette.*",
    "uvicorn.*",
    "fastapi.*",
    "prometheus_client.*",
    "prometheus_fastapi_instrumentator.*"
]
ignore_missing_imports = true
